Did some more work

--- a/bookings/src/main/resources/application.properties
+++ b/bookings/src/main/resources/application.properties
@@ -2,7 +2,31 @@ dbHotels = classpath:dbHotels.json
 dbFlights = dbFlights.json
 dbUsers = dbUsers.json
 
-hotel.error.not.found = Could not find the specified hotel.
+hotel.validation.code = 400
+hotel.validation.not.found = Could not find the specified hotel.
+hotel.validation.date.range.invalid = The date range passed is invalid.
+hotel.validation.destination.invalid = The passed destination is invalid.
+hotel.validation.people.amount.single = Cant have more than 1 person in this room type.
+hotel.validation.people.amount.double = Cant have more than 2 persons in this room type.
+hotel.validation.people.amount.triple = Cant have more than 3 persons in this room type.
+hotel.validation.people.amount.multiple =Cant have less than 4 and more than 10 person in this room type.
+hotel.validation.people.amount.default = Rooms can accommodate 1 to 10 people only.
+
+hotel.error.code = 404
+hotel.error.not.found = The specified hotel does not exist.
+hotel.error.unavailable = The specified hotel is not available for booking.
+
+card.validation.code = 400
+card.validation.debit.dues = Debit must have only 1 due.
+card.validation.credit.dues = Credit can have just 3, 6 or 12 dues.
+card.validation.invalid = Invalid credit card number.
+
+payment.error.code = 500
+payment.error.default = An error ocurred while processing the payment.
+
+email.validation.code = 400
+email.validation.invalid = Incorrect email sintax.
+
 
 flight.error.date.invalidFormat=Date with invalid format.
 flight.error.date.dateFrom.larger=Date dateFrom is larger than dateTo.
